[package]
name = "arino"
version = "0.1.0"
edition = "2021"

[dependencies]
prettytable-rs = "0.10.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
bimap = "0.6.3"
anyhow = "1.0.98"
