[package]
name = "arino"
version = "2.0.0"
edition = "2024"

[dependencies]
prettytable-rs = "0.10.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
